--- a/Proyecto_React/src/index.css
+++ b/Proyecto_React/src/index.css
@@ -68,3 +68,29 @@
     background-color: red;
     color: rgb(247, 247, 247);
 }
+
+.cart {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 20px;
+  }
+
+  .btn-continue-shopping {
+    background-color: rgb(218, 218, 218);
+    color: black;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    text-decoration: none;
+  }
+  
+  .btn-continue-shopping:hover {
+    background-color: darkgray;
+  }
+  
